--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,10 +5,10 @@
     <title>JQuery</title>
 </head>
 <body>
-<h1>Welcome to my page</h1>
+<h1 class="codeup">Welcome to my page</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus beatae doloremque eius, error eveniet exercitationem harum ipsum nobis nulla quo.</p>
-<h4>This is a list</h4>
-<ul>
+<h4 class="codeup">Below is a list</h4>
+<ul id="codeup">
     <li>item one</li>
     <li>item two</li>
     <li>item three</li>
@@ -33,6 +33,9 @@
     // var grabbingById = $('#myDiv').html(); will return the tags and comments inside
     var grabbingById = $('#myDiv').text();
     alert(grabbingById);
+
+    //selectors exercise 2
+    $('.codeup').css('border', '1px solid red');
 
 
 </script>
