selectors exercise 3 completed

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -31,11 +31,18 @@
 
     // selectors exercise 1
     // var grabbingById = $('#myDiv').html(); will return the tags and comments inside
-    var grabbingById = $('#myDiv').text();
-    alert(grabbingById);
+    // var grabbingById = $('#myDiv').text();
+    // alert(grabbingById);
 
     //selectors exercise 2
-    $('.codeup').css('border', '1px solid red');
+    // $('.codeup').css('border', '1px solid red');
+
+    // selectors exercise 3
+    $('li').css('font-size', '20px');
+    $('h1').css('background-color', 'yellow');
+    $('p').css('background-color', 'yellow');
+    $('li').css('background-color', 'yellow');
+    alert($('h1').text());
 
 
 </script>
