--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -5,6 +5,40 @@
     <title>Jquery Faq</title>
 </head>
 <body>
+<h4>faqs</h4>
 
+<dl>
+    <dt>How many employees are in the National Park Service?
+    </dt>
+    <dd class="invisible">Permanent, temporary, and seasonal employees: Approximately 20,000.
+        Volunteers: More than 279,000 in 2019</dd>
+
+    <dt>How old is the National Park System?</dt>
+    <dd class="invisible">The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916. Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as the nation's first national park. View the National Park System timeline.</dd>
+
+    <dt>What is the largest national park site? </dt>
+    <dd class="invisible">Wrangell-St. Elias National Park and Preserve, AK, at 13.2 million acres</dd>
+
+    <dt>What is the smallest national park site?</dt>
+    <dd class="invisible">Thaddeus Kosciuszko National Memorial, PA, at 0.02 acres</dd>
+
+    <dt>How many people visit the national parks?</dt>
+    <dd class="invisible">Total recreation visitors to the national parks in 2021: 297,115,406.</dd>
+
+    <dt>Where can I find a park map?</dt>
+    <dd class="invisible">You can view maps on specific park websites or find national park, National Park System, National Trails System, and other maps.</dd>
+
+    <dt>Can I bring my pet to a national park?</dt>
+    <dd class="invisible">Some national parks welcome pets—in developed areas, on many trails and campgrounds, and in some lodging facilities.</dd>
+
+    <dt>What do I need to know about driving off road in national parks?</dt>
+    <dd class="invisible">Before you head out, check with the national parks that you intend to visit. In many national parks, off-road driving is illegal. Where off-road driving is allowed, the National Park Service regulates it.</dd>
+
+    <dt>What government agency oversees the National Park Service?</dt>
+    <dd class="invisible">The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is the department's Assistant Secretary for Fish, Wildlife and Parks.</dd>
+
+    <dt>How do I reserve a tour in a park?</dt>
+    <dd class="invisible">You can book some park tours through Recreation.gov such as Pearl Harbor National Memorial, many Mammoth Cave National Park cave tours, Independence National Historical Park tours, and more. Not all parks participate in this reservation service. For more information on tours offered at a specific park, please see the park search.</dd>
+</dl>
 </body>
 </html>
