--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -91,13 +91,18 @@
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script>
-    $('#toggle-all').click(function () {
-        $('dd').toggleClass('invisible');
-    })
+    "use strict";
 
-    $('.toggle-one').click(function(event) {
-        $(event.target).prev().toggleClass('invisible');
-    })
+    (function () {
+        $('#toggle-all').click(function () {
+            $('dd').toggleClass('invisible');
+        })
+
+        $('.toggle-one').click(function (event) {
+            $(event.target).prev().toggleClass('invisible');
+        })
+    }())
+
 
 </script>
 </body>
