added flag counter to keep track

--- a/konami.html
+++ b/konami.html
@@ -51,6 +51,7 @@
         <button class="returnHome">Return to Main Screen</button>
     </div>
     <div>
+        <p id="flagNumber">Current Number of Flags Placed: 0</p>
         <button id="flag">Flag</button>
     </div>
     <div class="wrapper"></div>
