added mines total in a easy place to see

--- a/konami.html
+++ b/konami.html
@@ -51,6 +51,7 @@
         <button class="returnHome">Return to Main Screen</button>
     </div>
     <div>
+        <p>Mines Total: 40</p>
         <p id="flagNumber">Current Number of Flags Placed: 0</p>
         <button id="flag">Flag</button>
     </div>
