--- a/ajax-store.html
+++ b/ajax-store.html
@@ -2,31 +2,63 @@
 <html>
 <head>
     <title>Online Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #e6f6ff;
+        }
+
+        thead tr:nth-child(1) {
+            background-color: lightgray;
+        }
+
+        tr {
+            background-color: white;
+        }
+
+        button {
+            max-width: 150px;
+        }
+    </style>
 </head>
 <body>
 
-<h1>My Tool Store</h1>
-
-<table id="products">
-    <thead>
-    <tr>
-        <th>Title</th>
-        <th>Quantity</th>
-        <th>Price</th>
-        <th>Categories</th>
-    </tr>
-    </thead>
-    <tbody id="insertProducts"></tbody>
-</table>
-<button id="refresh">Refresh List</button>
+<h1 class="text-center">My Tool Store</h1>
+<div class="container d-flex flex-column align-items-end">
+    <table id="products" class="table table-bordered table-sm mt-4 text-center">
+        <thead>
+        <tr class="border-bottom border-dark">
+            <th scope="col">Title</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Price</th>
+            <th scope="col">Categories</th>
+        </tr>
+        </thead>
+        <tbody id="insertProducts"></tbody>
+    </table>
+    <button id="refresh">Refresh List</button>
+</div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 <script>
     (function () {
         "use strict";
 
+        //auto load
+        $.get('data/inventory.json').done(function (res) {
+            res.forEach(function (tool) {
+                $('#insertProducts').append(`<tr><td>${tool.title}</td><td>${tool.quantity}</td><td>$${tool.price}</td><td>${tool.categories}</td></tr>`);
+            })
+        }).fail(function () {
+            alert("uh oh, something went wrong...")
+        })
+
+        //refresh button
         $('#refresh').click(function () {
             $('#insertProducts').html('<tbody id="insertProducts"></tbody>');
             $.get('data/inventory.json').done(function (res) {
@@ -60,6 +92,5 @@
 
     })();
 </script>
-
 </body>
 </html>
