--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -20,6 +20,16 @@
 </head>
 <body>
 <div id="map"></div>
+<!--<form>-->
+<!--onchange="this.form.submit()"-->
+<label for="change-zoom">Change zoom level</label>
+<select name="change-zoom" id="change-zoom">
+    <option value="5" >5</option>
+    <option value="15" >15</option>
+    <option value="20">20</option>
+    <option value="reset">Reset</option>
+</select>
+<!--</form>-->
 
 
 <!--Jquery-->
@@ -33,14 +43,39 @@
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
 <!--custom-->
 <script>
+    var startingZoom = 9;
+
+
     mapboxgl.accessToken = MAPBOX_KEY;
     const map = new mapboxgl.Map({
         container: 'map', // container ID
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
         style: 'mapbox://styles/mapbox/streets-v12', // style URL
         center: [-0.127850, 51.511760], // starting position [lng, lat]
-        zoom: 9 // starting zoom
+        zoom: startingZoom // starting zoom
     });
+
+    $('#change-zoom').change(function(e) {
+        e.preventDefault();
+        var selected = $('#change-zoom').val();
+        switch(selected) {
+            case '5':
+                map.setZoom(5);
+                break;
+            case '15':
+                map.setZoom(15);
+                break;
+            case '20':
+                map.setZoom(20);
+                break;
+            case 'reset':
+                map.setZoom(startingZoom);
+                break;
+        }
+
+    })
+
+
 </script>
 </body>
 </html>
