--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -44,25 +44,21 @@
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
 <!--custom-->
 <script>
+    //starting points
     var startingZoom = 12;
     var startLat = 51.497682;
-
-
     var startLon =  -0.144723;
 
-
-
-
-
+    //creating map
     mapboxgl.accessToken = MAPBOX_KEY;
     const map = new mapboxgl.Map({
-        container: 'map', // container ID
-        // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
-        style: 'mapbox://styles/mapbox/streets-v12', // style URL
-        center: [startLon, startLat], // starting position [lng, lat]
-        zoom: startingZoom // starting zoom
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v12',
+        center: [startLon, startLat], // [lng, lat]
+        zoom: startingZoom
     });
 
+    //change zoom button
     $('#change-zoom').change(function(e) {
         e.preventDefault();
         var selected = $('#change-zoom').val();
@@ -80,24 +76,7 @@
                 map.setZoom(startingZoom);
                 break;
         }
-    })
-
-    $('#test-geocode').click(function() {
-        // the  geocode method from mapbox-geocoder-utils.js
-        geocode("600 Navarro St #350, San Antonio, TX 78205", MAPBOX_KEY).then(function(result) {
-            console.log(result);
-            map.setCenter(result);
-            map.setZoom(20);
-        });
-    })
-
-    //test marker
-    var marker = new mapboxgl.Marker().setLngLat([-98.4916, 29.4260]).addTo(map);
-
-    //test popup
-    var alamoPopup = new mapboxgl.Popup()
-        .setHTML("<p>Remember The Alamo!</p>")
-    marker.setPopup(alamoPopup)
+    });
 
     //three restaurants
     var restaurants = [
@@ -115,6 +94,7 @@
         },
     ];
 
+    //function to place marker and popup
     function placeMarkerAndPopup(info, token, map) {
         geocode(info.address, token).then(function(coordinates) {
             var popup = new mapboxgl.Popup()
@@ -122,15 +102,37 @@
             var marker = new mapboxgl.Marker()
                 .setLngLat(coordinates)
                 .addTo(map)
-                marker.setPopup(popup);
+            marker.setPopup(popup);
 
         });
     }
 
+    //looping through restaurants and adding them to the map
     restaurants.forEach(function(restaurant) {
-        console.log(restaurant);
         placeMarkerAndPopup(restaurant, MAPBOX_KEY, map);
     })
+
+
+
+    //****************this is just me testing out how to do the different things, pls ignore***************
+    // $('#test-geocode').click(function() {
+    //     // the  geocode method from mapbox-geocoder-utils.js
+    //     geocode("600 Navarro St #350, San Antonio, TX 78205", MAPBOX_KEY).then(function(result) {
+    //         console.log(result);
+    //         map.setCenter(result);
+    //         map.setZoom(20);
+    //     });
+    // })
+
+    //test marker
+    // var marker = new mapboxgl.Marker().setLngLat([-98.4916, 29.4260]).addTo(map);
+    //
+    // //test popup
+    // var alamoPopup = new mapboxgl.Popup()
+    //     .setHTML("<p>Remember The Alamo!</p>")
+    // marker.setPopup(alamoPopup)
+
+
 
 
 
