changed mcdonalds location to better fit coco's in the center of the map

--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -87,7 +87,7 @@
         },
         {
             name: 'McDonalds',
-            address: 'Main Concourse, Victoria Station, London SW1V 1JT, United Kingdom',
+            address: '241 City Rd, London EC1V 1JQ, United Kingdom',
             info: 'This guy made it on the favorites list because in England they have chicken selects (chicken tenders) with smokey bbq sauce and its the best thing ever.'
         },
         {
