--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         body {
             margin: 0;
@@ -16,11 +17,19 @@
             height: 600px;
             width: 600px;
         }
+
+        h1 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
+<h1>Welcome To My Map</h1>
+
+<div class="container d-flex"><!--    <div class="row">-->
 <div id="map"></div>
 
+    <div id="controls">
 <label for="change-zoom">Change zoom level</label>
 <select name="change-zoom" id="change-zoom">
     <option value="5" >5</option>
@@ -33,12 +42,17 @@
 
 <label for="search">Mark a Location</label>
 <input type="text" id="search" placeholder="Enter Address Here">
+    </div>
+<!--    </div>-->
+</div>
 
 
 
 <!--Jquery-->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<!--BootStrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <!--geocode-->
 <script src="js/mapbox-geocoder-utils.js"></script>
 <!--access keys-->
